# delivery-standardization

./: .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  README.md
grader/: PROPOSAL.md  README.md  pyproject.toml
grader/config/: grader.config.example.yaml
grader/src/nolte_grader/: __init__.py  __main__.py
grader/src/nolte_grader/adapters/: __init__.py
grader/src/nolte_grader/adapters/jira/: __init__.py  field_discovery.py  http_client.py
grader/src/nolte_grader/adapters/judge/: __init__.py  cache.py  client.py  prompts.py
grader/src/nolte_grader/adapters/secrets/: __init__.py  env.py
grader/src/nolte_grader/core/: __init__.py  aggregator.py  config.py  errors.py  grader.py  logging.py  models.py  protocols.py
grader/src/nolte_grader/evaluators/: __init__.py  commitment.py  downstream.py  upstream.py  workflow.py
grader/src/nolte_grader/formatters/: excel.py  markdown.py
grader/src/nolte_grader/parsers/: __init__.py  adf.py  changelog.py  description.py
grader/tests/: conftest.py
grader/tests/fixtures/: BBIT-495.json  BBIT-501.json
grader/tests/integration/: test_fixture_grade.py  test_rollup.py
grader/tests/integration/snapshots/: BBIT-495.json  BBIT-501.json  rollup.md
grader/tests/unit/adapters/jira/: test_field_discovery.py  test_http_client.py
grader/tests/unit/core/: test_config.py  test_errors.py  test_grader.py  test_logging.py  test_models.py
grader/tests/unit/evaluators/: test_commitment.py  test_downstream.py  test_upstream.py  test_workflow.py
grader/tests/unit/parsers/: test_adf.py  test_changelog.py  test_description.py
(+54 files in other folders)
